# Volumetric_Client

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/volumetric/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/volumetric/: DracoDecoder.java  MainActivity.java  PlyRenderer.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/volumetric/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
